--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,10 @@
       "firebase.json"
     ],
     "cleanUrls": true,
-    "trailingSlash": false
+    "trailingSlash": false,
+    "rewrites": [{
+        "source": "member/**",
+        "destination": "/member.html"
+    }]
   }
 }
