--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,7 @@
     "cleanUrls": true,
     "trailingSlash": false,
     "rewrites": [{
-        "source": "(.*)?",
+        "source": "**",
         "destination": "/index.html"
     }]
     // "rewrites": [
